moved images to their own directory

--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -49,7 +49,7 @@ This is the definition used for the remainder of this work.
     
         \begin{figure}
             \centering
-            \includegraphics[scale=.5]{benington_waterfall.PNG}
+            \includegraphics[scale=.5]{images/benington_waterfall.PNG}
             \caption[Benington's original diagram for producing large software systems]
                     {Benington's original diagram for producing large software 
                         systems, adapted from \cite{Benington1987}}
@@ -57,7 +57,7 @@ This is the definition used for the remainder of this work.
         \end{figure}%
         \begin{figure}
             \centering
-            \includegraphics[scale=.5]{royce_waterfall.PNG}
+            \includegraphics[scale=.5]{images/royce_waterfall.PNG}
             \caption[Royce's version of the waterfall model]
                 {Royce's version of the waterfall model for producing software 
                         systems, adapted from \cite{Royce1987}}
@@ -71,7 +71,7 @@ This is the definition used for the remainder of this work.
         A modern diagram of the waterfall model can be seen in Figure \ref{fig:waterfall}.
         \begin{figure}[here]
             \centering
-            \includegraphics[scale=.6]{waterfall.png}
+            \includegraphics[scale=.6]{images/waterfall.png}
             \caption[Modern Waterfall]
                 {Modern Waterfall Diagram, adapted from \cite{Hibbs2009} }
             \label{fig:waterfall}
@@ -110,7 +110,7 @@ This is the definition used for the remainder of this work.
         and the overall process. 
         \begin{figure}[here]
             \centering
-            \includegraphics[scale=.5]{spiral_model.png}
+            \includegraphics[scale=.5]{images/spiral_model.png}
             \caption[Spiral SDLC Model]{Spiral SDLC Model \cite{Boehm2000} }
             \label{fig:spiral}
         \end{figure}
