--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -10,7 +10,7 @@ The SDLC-AE would make gamification of the SDLC attainable.  Prior attempts
 at gamification of the SDLC focus only on the development phase \cite{Dubois2013} \cite{Snipes2013}.
 
 \begin{figure}[ht]
-\includegraphics[scale=.7]{sdlc-ae.png}
+\includegraphics[scale=.7]{images/sdlc-ae.png}
 \caption{SDLC Analytic Engine}
 \label{fig:sdlc-ae}
 \end{figure}
