updates to signature page and bibliography

--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -123,7 +123,7 @@
 
 %% add dots in the table of contents
 \renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}} 
-\renewcommand{\contentsname}{TABLE OF CONTENTS \hfill}
+\renewcommand{\contentsname}{CONTENTS \hfill}
 %% tocloft already has the correct figure and table names
 \renewcommand{\listfigurename}{LIST OF FIGURES}
 \renewcommand{\listtablename}{LIST OF TABLES}
@@ -188,10 +188,10 @@
 \setcounter{page}{2}
 
 %% Approval/signature page
-%\subfile{signature}
+\subfile{signature}
 
 %% Acknowledgements page
-%\subfile{acknowledgements}
+\subfile{acknowledgements}
 
 %% Quotes (optional)
 %\subfile{quotes}
