--- a/signature.tex
+++ b/signature.tex
@@ -13,13 +13,17 @@
 \singlespacing
 
 \hspace*{\fill}\underline{$~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$}\\
-\hspace*{230bp}\youradvisor\\
-\hspace*{\fill}Thesis Advisor \hspace*{97bp}Date
+\hspace*{194bp}\youradvisor\\
+\hspace*{\fill}Dissertation Advisor \hspace*{47bp}Date
 
 \vspace{1in}
 
 \hspace*{\fill}\underline{$~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$}\\
-\hspace*{230bp}\departmenthead\\
+\hspace*{194bp}\departmenthead\\
 \hspace*{\fill}Head, Math and Statistics \hspace*{40bp}Date
 
+\vspace{1in}
+
+\hspace*{\fill}\underline{$~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$}\\
+\hspace*{194bp}Dean, Graduate School \hspace*{54bp}Date
 \end{document}
