a few more updates to the signature page

--- a/signature.tex
+++ b/signature.tex
@@ -6,7 +6,11 @@
 \vspace{0.5in}
 \end{center}
 
-\par This thesis is approved as a creditable and independent investigation by a candidate for the Master's of Science degree and is acceptable for meeting the thesis requirements for this degree.  Acceptance of this thesis does not imply that the conclusions reached by the candidate are necessarily the conclusions of the major department.
+\par This dissertation is approved as a creditable and independent investigation by a 
+candidate for the Doctor of Philosophy degree and is acceptable for 
+meeting the dissertation requirements for this degree. Acceptance of this does not imply 
+that the conclusions reached by the candidates are necessarily the conclusions of the 
+major department.
 
 \vspace{1.5in}
 
