minor changes to signature page

--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -113,6 +113,11 @@
 % for clever references
 \usepackage{cleveref}
 
+% to center column headings
+\usepackage[up,tiny,center,uppercase]{titlesec}
+% set the section numbering depth
+\setcounter{secnumdepth}{3}
+
 \ifblackandwhite
   \newcommand{\cheading}[2]{\textbf{#1\hfill #2}}
   \newcommand{\highest}[1]{\textbf{#1}}% == highest score for question
