capitalize titles and rearrange  sections

--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -74,7 +74,7 @@
 %% Package: sectsty
 %% Description: Customize the section styles (in the document, not ToC/LoF/LoT)
 %% CTAN Link: http://tug.ctan.org/tex-archive/macros/latex/contrib/sectsty/
-\usepackage{sectsty}
+%\usepackage{sectsty}
 
 %% Package: bm
 %% Description: Bolds math symbols
@@ -152,7 +152,7 @@
 \renewcommand{\cftsecpagefont}{}
 
 % style for sections titles
-\allsectionsfont{\usefont{OT1}{cmr}{m}{n}\normalsize\selectfont}
+%\allsectionsfont{\usefont{OT1}{cmr}{m}{n}\normalsize\selectfont\MakeUppercase}
 
 %% sets page numbers in upper right hand corner and empty header/footers
 \pagestyle{myheadings}
@@ -173,7 +173,7 @@
 %% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %% AUTHOR MUST MODIFY
-\def\yourtitle{EVALUATING A SOFTWARE DEVELOPMENT ORGANIZATION}
+\def\yourtitle{SCORING A SOFTWARE DEVELOPMENT ORGANIZATION}
 \def\yourname{RYAN M. SWANSTROM}
 \def\yourmajor{Computational Science and Statistics}
 \def\youradvisor{Dr. Gary Hatfield}
