--- a/appendices.tex
+++ b/appendices.tex
@@ -34,10 +34,10 @@ APPENDIX\\
 %% http://www.astro.rug.nl/~kuijken/latex.html
 %%\clearpage
 
-\section{Case Study Source Code} 
+\section{CASE STUDY SOURCE CODE} 
 \label{app:case}
 
-\subsection{R Code - Quality} 
+\subsection{R CODE - QUALITY} 
 \scriptsize{
 \begin{lstlisting}[language=R]
 # Load the Quality data.
