--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -6,7 +6,7 @@
 \setcounter{tocdepth}{2}
 
 % see this for  guidance https://www.cs.purdue.edu/homes/dec/essay.dissertation.html
-\section{Introduction}
+\section{INTRODUCTION}
 
 Software is becoming a vital part of companies. In 2011 Marc Andreessen, co-founder of the venture capital firm Andreessen-Horowitz,
 famously claimed, ``Software is Eating The World'' \cite{Andreessen2001}. His argument was for the ever increasing importance of software
@@ -19,7 +19,7 @@ achieve the score will be presented.  The  score
 is not to be comparative between organizations, but to rather form a historical baseline for a specific organization.  Also, a software
 system to collect, calculate, and report the score will be presented.
 
-\subsection{Background}
+\subsection{BACKGROUND}
 
 Throughout the history of software development, many values have been collected and used to measure the effectiveness of software development. 
 Many metrics have been used in the past and are still being used.  A metric can be defined as the science of indirect measurement.
@@ -37,7 +37,7 @@ Most of the effort has been placed on measuring just the computer code and not t
 development involves more than just source code.
 
 
-\subsection{Previous Software Engineering Scoring Attempts}
+\subsection{PREVIOUS SOFTWARE SCORING ATTEMPTS }
 
 Sextant is a visualization tool for Java source code \cite{Winter2013}.  Sextant provides a graphical representation of the information related 
 to a software system.  The tool provides the capability to provide custom rules which are specific to the domain or application.  However,
