--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 
-\section{A Software Development Organization (SDO)}
+\section{A SOFTWARE DEVELOPMENT ORGANIZATION (SDO)}
 A \textit{Software Development Organization} is any organization or subset of an organization that is responsible
 for the creation, deployment, and maintenance of software.  Many times a software development organization
 is a company that produces software.  Other times, a software development organization is contained
@@ -11,14 +11,14 @@ with an SDO are: software engineer, system administrator, software quality analy
 programmer, database administrator, and documentation specialist.
 
 
-\subsection{What is Software?}
+\subsection{WHAT IS SOFTWARE?}
 Numerous definitions can be found for the term \textit{software}.
 Software is more than just computer programs. According to Ian Sommerville \cite{Sommerville2001}, 
 "Software is not just the programs but also all associated documentation and configuration data which is needed to make these programs operate correctly."
 This is the definition used for the remainder of this work.
 
 
-\subsection{The Software Development Lifecycle}
+\subsection{THE SOFTWARE DEVELOPMENT LIFECYCLE}
     For this question, I choose to rewrite that section of the proposal.  This was
     my favorite question. It forced me to go look back into the history of
     software development. 
@@ -38,7 +38,7 @@ This is the definition used for the remainder of this work.
     models are described below.
     
     
-    \subsubsection{Waterfall}
+    \subsubsection{WATERFALL}
         The waterfall model is the oldest and most influential of the SDLC models. 
         It was first presented at a Navy Mathematical Computing Advisory Panel in 1956
         by Herb Benington \cite{Benington1987}. Figure \ref{fig:benington} shows
@@ -87,7 +87,7 @@ This is the definition used for the remainder of this work.
         the other models are  adaptations of waterfall.
     
     
-    \subsubsection{Spiral}
+    \subsubsection{SPIRAL}
         
         The spiral model for software development was presented by Boehm in 1986
         \cite{Boehm1986, Boehm1988}. 
@@ -116,7 +116,7 @@ This is the definition used for the remainder of this work.
         \end{figure}
         
         
-    \subsubsection{Agile}
+    \subsubsection{AGILE}
         Agile software development has arisen due to the inability
         of the waterfall and other models to adjust to changes during the 
         development cycle.  
@@ -137,7 +137,7 @@ This is the definition used for the remainder of this work.
         quickly changing applications such as web-based applications.
         
         
-    \subsubsection{SDLC Commonalities}
+    \subsubsection{SDLC COMMONALITIES}
         Even with the large number of SDLC models currently being used by different SDOs,
         there is still some commonalities among the models.  The 
         commonalities can be tied back to the steps of waterfall.  All of the models
@@ -167,7 +167,7 @@ This is the definition used for the remainder of this work.
                 development lifecycle.
         \end{description}
         
-\subsection{What is Software Engineering?}
+\subsection{WHAT IS SOFTWARE ENGINEERING?}
     \textit{Software Engineering} as a term dates back to the 
     1968 North Atlantic Treaty Organization (NATO) conference \cite{Tsui2013}. Over the 
     years many definitions have been provided.  IEEE provides a definition that encompasses many of the
@@ -180,7 +180,7 @@ This is the definition used for the remainder of this work.
     Software projects are typically behind schedule and over budget. Organizations need a better
     technique to understand the past performance so they can better predict the future performance.
 
-\subsection{Terminology}
+\subsection{TERMINOLOGY}
 
 \begin{description}
     \item[SIT]   (Systems Integration Testing) - The initial step of testing
