--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 % All about the SDLC Analytic Engine
-\section{SDLC Analytic Engine}
+\section{SDLC ANALYTIC ENGINE}
 
 In order for an SDO to properly track the elements of MPI, a data storage system should be available to store the appropriate data.   This storage system will be named the SDLC Analytic Engine (SDLC-AE). Figure \ref{fig:sdlc-ae} provides an overview of the data that could potentially be stored in the SDLC-AE.
 
@@ -15,17 +15,17 @@ at gamification of the SDLC focus only on the development phase \cite{Dubois2013
 \label{fig:sdlc-ae}
 \end{figure}
 
-\subsection{Database Structure}
+\subsection{DATABASE STRUCTURE}
    All the data necessary to compute MPI needs to be stored in a database.  This section will 
    layout the structure of tables and relationships necessary to the store all the data
    within a relational database such as MySQL or PostgreSQL.  Eventually,
    database diagrams and SQL scripts will be provided in the section.
 
-\subsection{Queries}
+\subsection{QUERIES}
     The section will provide the necessary SQL queries to obtain the correct data
     needed to compute the individual elements of MPI.
     
-\subsection{Computations}
+\subsection{COMPUTATIONS}
     This section will provide R scripts to calculate each individual score and the overall 
     MPI score. The scripts will need to be run every time the data is updated and the MPI
     score needs to be recalculated.
