--- a/paper_60_tooling.tex
+++ b/paper_60_tooling.tex
@@ -3,22 +3,21 @@
 
 
 % new section
-\section{Tooling}
+\section{TOOLING}
 
-\subsection{SDLC Dashboard}
+\subsection{SDLC DASHBOARD}
 This maybe needs a name: Project MPI????  The goal of this project is to provide a tool that
 given the 5 files will be able to provide a score for the software department.  It should run 
 as a web application.
 
 This section will provide information to install and run a tool for calculating MPI for an organization.
-\subsubsection{Introduction}
-\subsubsection{Overview}
-\subsubsection{Installation}
-\subsubsection{Database}
+\subsubsection{INTRODUCTION}
+\subsubsection{OVERVIEW}
+\subsubsection{INSTALLATION}
+\subsubsection{DATABASE}
 maybe MongoDB, maybe PostgreSQL/MySQL
-\subsubsection{Webserver}
+\subsubsection{WEBSERVER}
 The software can either run standalone on cloud-hosted platform such as Heroku.  Try using Play Framework 2 with Authenticate.
 
-\subsection{SDLC-AE}
 
 \end{document}
