--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 % new section
-\section{Case Study: Scoring an SDO of a Large Financial Institution}
+\section{CASE STUDY: SCORING AN SDO OF A LARGE FINANCIAL INSTITUTION}
 
 Data has been collected from the software development processes of
 an SDO within a large financial institution.
