--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 % new section
-\section{Conclusions}
+\section{CONCLUSION}
 
 There are many metrics that can be used to evaluate a Software Development Organization (SDO). 
 Knowing which metrics to use and what they all mean can be a daunting task.  MPI is a
