--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -3,7 +3,7 @@
 
 
 % new section
-\section{Data Driven Software Engineering}
+\section{DATA DRIVEN SOFTWARE ENGINEERING}
 
 Performance indicators can be crucial measurements
 within any business setting, and an SDO is no exception. Many
@@ -23,13 +23,13 @@ More information on the indicators can be found
 in chapter 1 of \cite{parmenter2010}
 as well as \cite{florac1999,kaplan1992,letier2013}.
 
-\subsection{Result Indicators for Software Departments}
+\subsection{RESULT INDICATORS FOR SDOs}
     This section will cover the potential result indicators for an SDO.
 
-\subsection{Performance Indicators for Software Departments}
+\subsection{PERFORMANCE INDICATORS FOR SDOs}
     This section will cover the potential performance indicators for an SDO.
 
-\subsection{Balanced Scorecard}
+\subsection{BALANCED SCORECARD}
 
 A common technique for organization to measure themselves is a balanced scorecard.
 A \textit{balanced scorecard} must contain the following
@@ -86,14 +86,14 @@ these measures. Those equations will be studied and evaluated.
 
 Antolic in \cite{Antolic2008} demostrates some ways to measure KPIs for the  software development process.
 
-\subsection{Measuring Other Aspects of an SDO}
+\subsection{MEASURING OTHER ASPECTS OF AN SDO}
 
 It is important to note that software departments do not just
 develop software.  The department has many other duties
 including: deploying software, installing server hardware/software,
 writing documentation, surveying users, and other things.
 
-\subsection{Combining The Measures to Form MPI}
+\subsection{COMBINING THE MEASURES TO FORM MPI}
 
 How can the PIs, RIs, KRIs, and KPIs be combined to form a single
 value called an MPI (Master Performance Indicator)?  The field
