adding some new references

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -12,7 +12,7 @@ REFERENCES\\
 % http://www.andy-roberts.net/misc/latex/latextutorial3.html
 
 {\def\section*#1{}
-    \bibliographystyle{ieeetr}
+    \bibliographystyle{acm}
     \bibliography{references}
     \addcontentsline{toc}{section}{REFERENCES}
 }
