--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -64,5 +64,8 @@ organizations still struggle to measure the production of software.
 Little work exists
 for scoring the entire software development organization. 
 
+Quality is tested in \cite{Miguel2014}
+
+See also \cite{Buse2010} and \cite{Jacobson2014}
 
 \end{document}
