--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -169,7 +169,7 @@ This is the definition used for the remainder of this work.
         
 \subsection{WHAT IS SOFTWARE ENGINEERING?}
     \textit{Software Engineering} as a term dates back to the 
-    1968 North Atlantic Treaty Organization (NATO) conference \cite{Tsui2013}. Over the 
+    1968 North Atlantic Treaty Organization (NATO) conference \cite{Tsui2013, Naur1969}. Over the 
     years many definitions have been provided.  IEEE provides a definition that encompasses many of the
     other definitions.  IEEE defines software engineering as, 
     ''The application of a systematic, disciplined, quantifiable approach to the development, operation, and maintenance of software''
@@ -195,6 +195,13 @@ This is the definition used for the remainder of this work.
     \item[defect] Whenever the output of software does not meet expectations.  It is important to mention that even though defects are typically 
             found in the computer code, a defect should not be isolated to just code.   A poorly written requirement or missed test cases can 
             both be considered a defect.  Other common names for a defect are: bug, error, fault, or ticket.
+            
+            ``
+                A software defect is a bug or error that causes
+                software to either stop operating or to produce
+                invalid or unacceptable results.
+            '' as quoted from
+            \cite{Jones2009}.  Also in here is the 4 severity levels.  Also, current defect removal is only about 85\% and this value should be increased to about 95\%. 
 \end{description}
 
 %\subsection{Data-Driven Software Engineering}
