--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,23 @@
   publisher={MIPRO}
   url={http://www.ericsson.com/hr/etk/dogadjanja/mipro_2008/1220.pdf}
 }
+@inproceedings{Buse2010,
+ author = {Buse, Raymond P.L. and Zimmermann, Thomas},
+ title = {Analytics for Software Development},
+ booktitle = {Proceedings of the FSE/SDP Workshop on Future of Software Engineering Research},
+ series = {FoSER '10},
+ year = {2010},
+ isbn = {978-1-4503-0427-6},
+ location = {Santa Fe, New Mexico, USA},
+ pages = {77--80},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1882362.1882379},
+ doi = {10.1145/1882362.1882379},
+ acmid = {1882379},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {analytics, project management},
+} 
 @unpublished{Cervone2014,
   author={Dan Cervone and Alexander D'Amour and Luke Bornn and Kirk Goldsberry},
   title={POINTWISE: Predicting Points and Valuing Decisions in Real Time with NBA Optical Tracking Data},
@@ -76,6 +93,24 @@ pages={1-84},
 keywords={glossaries;software engineering;standards;IEEE Std 610.12-1990;software engineering terminology;standard glossary;Software engineering;Standards;Terminology;Definitions;Software engineering;dictionary;glossary;terminology},
 doi={10.1109/IEEESTD.1990.101064}
 }
+@article{Jacobson2014,
+ author = {Jacobson, Ivar and Seidewitz, Ed},
+ title = {A New Software Engineering},
+ journal = {Commun. ACM},
+ issue_date = {December 2014},
+ volume = {57},
+ number = {12},
+ month = nov,
+ year = {2014},
+ issn = {0001-0782},
+ pages = {49--54},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2677034},
+ doi = {10.1145/2677034},
+ acmid = {2677034},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
 @book{Jones1996,
  author = {Jones, Capers},
  title = {Applied Software Measurement (2Nd Ed.): Assuring Productivity and Quality},
@@ -101,6 +136,19 @@ doi={10.1109/IEEESTD.1990.101064}
  publisher = {McGraw-Hill, Inc.},
  address = {New York, NY, USA},
 } 
+@ARTICLE{Jorgensen2014,
+    author={Jorgensen, M.},
+    journal={Software, IEEE},
+    title={What We Do and Don't Know about Software Development Effort Estimation},
+    year={2014},
+    month={Mar},
+    volume={31},
+    number={2},
+    pages={37-40},
+    keywords={software cost estimation;cost overruns;software development effort estimation;unrealistic project plans;Context modeling;Costs;Estimation;Productivity;Software developmnet;combination of estimates;cost estimation;estimation models;expert estimation;software productivity},
+    doi={10.1109/MS.2014.49},
+    ISSN={0740-7459}
+}
 @article{Kaplan1992,
 	author = 	"Robert S. Kaplan and David P. Norton",
 	title =		"The Balanced Scorecard: Measures That Drive Performance",
@@ -127,17 +175,34 @@ doi={10.1109/IEEESTD.1990.101064}
   organization={IEEE}
 }
 @ARTICLE{McCabe1976, 
-author={McCabe, T.J.}, 
-journal={IEEE Transactions on Software Engineering}, 
-title={A Complexity Measure}, 
-year={1976}, 
-month={Dec}, 
-volume={SE-2}, 
-number={4}, 
-pages={308-320}, 
-keywords={Basis;complexity measure;control flow;decomposition;graph theory;independence;linear;modularization;programming;reduction;software;testing;Fluid flow measurement;Graph theory;Linear programming;National security;Software engineering;Software maintenance;Software measurement;Software systems;Software testing;System testing;Basis;complexity measure;control flow;decomposition;graph theory;independence;linear;modularization;programming;reduction;software;testing}, 
-doi={10.1109/TSE.1976.233837}, 
-ISSN={0098-5589},}
+    author={McCabe, T.J.}, 
+    journal={IEEE Transactions on Software Engineering}, 
+    title={A Complexity Measure}, 
+    year={1976}, 
+    month={Dec}, 
+    volume={SE-2}, 
+    number={4}, 
+    pages={308-320}, 
+    doi={10.1109/TSE.1976.233837}, 
+    ISSN={0098-5589},}
+@article{Miguel2014,
+    author={Jos\'{i} P. Miguel and David Mauricio and Glen Rodr\'{i}guez}, 
+    journal={International Journal of Software Engineering \& Applications (IJSEA)}, 
+    title={A REVIEW OF SOFTWARE QUALITY MODELS FOR THE EVALUATION OF SOFTWARE PRODUCTS }, 
+    year={2014}, 
+    month={Nov}, 
+    volume={5}, 
+    number={6}, 
+    pages={31-54}, 
+    note={\url{http://www.airccse.org/journal/ijsea/papers/5614ijsea03.pdf}},
+}
+@book{Naur1969,
+ editor = {Naur, Peter and Randell, Brian},
+ title = {Software Engineering: Report of a Conference Sponsored by the NATO Science Committee, Garmisch, Germany, 7-11 Oct. 1968, Brussels, Scientific Affairs Division, NATO},
+ year = {1969},
+ note = {\url{http://homepages.cs.ncl.ac.uk/brian.randell/NATO/nato1968.PDF}},
+} 
+
 @book{Parmenter2010,
 	author =	"David Parmenter",
 	title =		"Key Performance Indicators: developing, implementing, and using winning KPIs",
