adding material that had been removed for the proposal

--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -1,8 +1,6 @@
 \documentclass[SDSUThesis.tex]{subfiles} 
 \begin{document}
 
-
-% new section
 \section{DATA DRIVEN SOFTWARE ENGINEERING}
 
 Performance indicators can be crucial measurements
@@ -28,6 +26,7 @@ as well as \cite{florac1999,kaplan1992,letier2013}.
 
 \subsection{PERFORMANCE INDICATORS FOR SDOs}
     This section will cover the potential performance indicators for an SDO.
+    
 
 \subsection{BALANCED SCORECARD}
 
@@ -48,16 +47,16 @@ and organization.  However, a balanced scorecard does not specify what
 exactly needs to be tracked.  It is also not specific to an SDO and 
 it does produce a single number.
 
-%This info comes from \cite{parmenter2010}.
+This info comes from \cite{parmenter2010}.
 
-%\subsection{Possible data points for Level %of Effort}
+\subsection{Possible data points for Level of Effort}
 
-%\begin{description}
-%    \item[Actual Development Hours] Actual Hours Spent on development
-%    \item[Estimated Development Hours]  Initial Hours estimated for a project, this will commonly be different from the actual development hours
-%    \item[Source Lines Of Code (SLOC)]  This is count of the total number of lines of source code
-%    \item[Modified Lines Of Code] This is a count of the number of modified lines of source code. This number is a sum of the deleted, added, and modified lines of source code.
-%end{description}
+\begin{description}
+    \item[Actual Development Hours] Actual Hours Spent on development
+    \item[Estimated Development Hours]  Initial Hours estimated for a project, this will commonly be different from the actual development hours
+    \item[Source Lines Of Code (SLOC)]  This is count of the total number of lines of source code
+    \item[Modified Lines Of Code] This is a count of the number of modified lines of source code. This number is a sum of the deleted, added, and modified lines of source code.
+\end{description}
 
 According to Putnam and Myers in \cite{Putnam2013}, the 5 core measurements for managing software
 projects are:
@@ -99,5 +98,6 @@ How can the PIs, RIs, KRIs, and KPIs be combined to form a single
 value called an MPI (Master Performance Indicator)?  The field
 of sports analytics also has numerous techniques for combining
 multiple indicators to produce a single number \cite{Cervone2014}.
+
 
 \end{document}
