--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -204,10 +204,10 @@ This is the definition used for the remainder of this work.
             \cite{Jones2009}.  Also in here is the 4 severity levels.  Also, current defect removal is only about 85\% and this value should be increased to about 95\%. 
 \end{description}
 
-%\subsection{Data-Driven Software Engineering}
-%Data Driven Software Engineering not Data Driven Software Development
+\subsection{Data-Driven Software Engineering}
+Data Driven Software Engineering not Data Driven Software Development
 
-%Check these book \cite{Jones2009, Jones1996, Lee2003}. This might be similar
-%to process mining \cite{vanderAalst2012}.  
+Check these book \cite{Jones2009, Jones1996, Lee2003}. This might be similar
+to process mining \cite{vanderAalst2012}.  
 
 \end{document}
