fixed Schedule chapter problem starting to work on SEMAT section

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -66,6 +66,43 @@ for scoring the entire software development organization.
 
 Quality is tested in \cite{Miguel2014}
 
-See also \cite{Buse2010} and \cite{Jacobson2014}
+See also \cite{Buse2010}.
+
+\subsubsection{SEMAT}
+
+
+SEMAT is being dubbed as the ``new software engineering'' \cite{Jacobson2014}.
+Three parts to the kernel:
+\begin{itemize}
+\item Measurement
+\item Categorization
+\item Competencies
+\end{itemize}
+
+The seven dimensions:
+\begin{itemize}
+\item Opportunity
+\item Stakeholders
+\item Requirements
+\item Software Systems
+\item Work
+\item Team
+\item Way of Working
+\end{itemize}
+
+
+
+\subsection{ORGANIZATION OF THE WORK}
+
+The remainder of this dissertation is divided into 5 chapters.  The next chapter provides
+an overview of software, software development lifecycles, software engineering, and software
+development organizations.  Chapter 3 introduces what is meant by the term data-driven
+software engineering. Chapter 4 then provides an explanation of the Master Performance 
+Indicator (MPI).  It will present the essential elements for calculating the MPI, as well
+as the formulas, frameworks, and data necessary to produce the MPI. Chapter 5 provides
+a technological framework for generating and storing the current and historical MPI values.
+Chapter 6 demostrates how MPI can be implemented in a software development portion of 
+a large financial institution.  Chapter 7 concludes the dissertation with a summary
+of the results and some possible future directions for further enhancements. 
 
 \end{document}
