--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -1,7 +1,9 @@
 \documentclass[SDSUThesis.tex]{subfiles} 
 \begin{document}
 
-\section{DATA DRIVEN SOFTWARE ENGINEERING}
+\section{DATA-DRIVEN SOFTWARE ENGINEERING}
+
+Data Driven Software Engineering not Data Driven Software Development
 
 Performance indicators can be crucial measurements
 within any business setting, and an SDO is no exception. Many
