--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -195,22 +195,9 @@ Response Date & Date & Optional \\
 \end{longtable}
 
 
-\subsection{SCHEDULE}
-Delivery of software in a timely manner is important.  Therefore, it is critical to know whether software was released early, late, or on-time.  
-The best possible score should be achieved
-            when meeting the estimated date exactly.  The maximum score
-            should come from the best estimate.  Then given historical
-            release data, it is easy to determine an 
-            average $\Delta$ between the actual and the estimated.  
-            Finishing a project within that $\Delta$ should result 
-            in a positive score.  Outside the $\Delta$ results in
-            negative scores.  For example, a project releasing
-            one day early or one day late would receive the same score
-            because in both cases the estimate was missed by one day.
+\subsection{SCHEDULE}  
 
-
-\section{Schedule Adherence}
-    \subsection{Overview}
+    \subsubsection{Overview}
         Delivery of software in a timely manner is an essential part of being a 
         successful SDO.  Being able to meet scheduled deadlines is a sign of accurate
         estimation and planning.  Drastically missing deadlines is a sign of an SDO
@@ -232,8 +219,7 @@ The best possible score should be achieved
         For example, a package that takes more than twice as long to deliver than
         estimated will receive a score of -100.
     
-    \newpage
-    \subsection{Formula}
+    \subsubsection{Formula}
     
     The formula for schedule is based upon past performance.  Of the 422 projects
     scheduled since June 2013, only 45 projects had an estimated start date, estimated
@@ -287,12 +273,22 @@ The best possible score should be achieved
     
     
         
-    \subsection{Example Calculation}
-    \subsection{Data and Calculations}
-    \subsubsection{Obtain the Data}
-    \subsubsection{Run the Calculations}
-    \subsection{Past Performance}
-    \subsection{Process for the Future}
+    \subsubsection{Example Calculation}
+    \subsubsection{Data and Calculations}
+    \subsubsection{Past Performance}
+    \subsubsection{Process for the Future}
+    
+    \subsubsection{ALTERNATE APPROACH}
+    The best possible score should be achieved
+            when meeting the estimated date exactly.  The maximum score
+            should come from the best estimate.  Then given historical
+            release data, it is easy to determine an 
+            average $\Delta$ between the actual and the estimated.  
+            Finishing a project within that $\Delta$ should result 
+            in a positive score.  Outside the $\Delta$ results in
+            negative scores.  For example, a project releasing
+            one day early or one day late would receive the same score
+            because in both cases the estimate was missed by one day.
 
 %The score can be accomplished with the following 
 %algorithm.
