note for CMMI and cocomo

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -90,6 +90,9 @@ The seven dimensions:
 \item Way of Working
 \end{itemize}
 
+Also discuss somewhere in this intoduction: CMMI and Cocomo.
+List the levels of CMMI and what they mean.
+
 
 
 \subsection{ORGANIZATION OF THE WORK}
