adding book how to measure anything

--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -3,6 +3,8 @@
 
 \section{DATA-DRIVEN SOFTWARE ENGINEERING}
 
+Anything can be measured \cite{Hubbard2010}.
+
 Data Driven Software Engineering not Data Driven Software Development
 
 Performance indicators can be crucial measurements
