--- a/references.bib
+++ b/references.bib
@@ -193,6 +193,14 @@
     edition = {1st},
     publisher = {O'Reilly Media, Inc.},
 } 
+@book{hubbard2010,
+    title={How to Measure Anything: Finding the Value of Intangibles in Business},
+    author={Hubbard, D.W.},
+    isbn={9780470625699},
+    url={http://books.google.com/books?id=CBAh4eM-g3AC},
+    year={2010},
+    publisher={Wiley}
+}
 @ARTICLE{Ieee1990,
     journal={{IEEE Std 610.12-1990}},
     title={{IEEE Standard Glossary of Software Engineering Terminology}},
