descriptions for indicators

--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -13,13 +13,13 @@ SDOs struggle to determine the correct indicators to track and
 how to track them.  
 The differences between the indicators will be explored and
 possible measures for each indicator in an SDO will be
-presented.  The 4 different types of indicators are.
-\begin{enumerate}
-  \item RI (Result Indicator)
-  \item KRI (Key Result Indicator)
-  \item PI (Performance Indicator)
-  \item KPI (Key Performance Indicator)
-\end{enumerate}
+presented.  The 4 different types of indicators are:
+\begin{description}
+  \item[RI (Result Indicator)] - what has been done
+  \item[KRI (Key Result Indicator)] - how you have done
+  \item[PI (Performance Indicator)] - what to do
+  \item[KPI (Key Performance Indicator)] - what to do to dramatically increase performance
+\end{description}
 
 More information on the indicators can be found
 in chapter 1 of \cite{parmenter2010}
