added software dev analytics

--- a/references.bib
+++ b/references.bib
@@ -315,7 +315,16 @@
     number={4}, 
     pages={308-320}, 
     doi={10.1109/TSE.1976.233837}, 
-    ISSN={0098-5589},}
+    ISSN={0098-5589},
+}
+@INPROCEEDINGS{Menzies2012, 
+    author={Menzies, T. and Zimmermann, T.}, 
+    booktitle={Software Engineering (ICSE), 2012 34th International Conference on}, 
+    title={Goldfish bowl panel: Software development analytics}, 
+    year={2012}, 
+    month={June}, 
+    pages={1032-1033}
+}
 @article{Miguel2014,
     author={Jos\'{i} P. Miguel and David Mauricio and Glen Rodr\'{i}guez}, 
     journal={International Journal of Software Engineering \& Applications (IJSEA)}, 
