updates to intro

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -170,9 +170,10 @@ but it is more focused on conformance to a process or understanding the process.
 
 One example of scoring software development is presented by Jones \cite{Jones2012}. The methodology looks
 for the presence of various techniques used in software engineering.  The methodology provides a score based upon the 
-productivity and quality increase of the technique being evaluated.  A couple example techniques are: 
+productivity and quality increase of the technique being evaluated.  Points are positive or negative based upon the 
+presense of various techniques. A couple example techniques are: 
 automated source code analysis and continuous integration.  The end result is a score in range $[-10,10]$. 
-While the single number score is nice, it does not account for the entirety of the software development lifecycle.
+While the result is a single number score, it does not account for the entirety of the software development lifecycle.
 
 Much work has been done to determine metrics for source code, in fact 
 entire books have been written on the topic of software metrics \cite{Jones1996, Putnam2013}. Yet, 
@@ -220,6 +221,16 @@ software development analytics \cite{Menzies2012}.
     actual software engineering endeavours.  Although SEMAT does include a part for
     measurement of progress, it does not specify how the measurement is to be 
     performed.
+    
+    So it has been shown, there exist many attempts to 
+    evaluate portions of the a software development 
+    organization.  None of the the attempts provide
+    a single number score for the entirety of the 
+    organization.  Most of the techniques focus on
+    specific portions of the software development 
+    lifecycle, namely the development portion. 
+    
+    
 
 
 \subsection{ORGANIZATION OF THE WORK}
